Remove unnecessary links.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./index.html">Pokemon GO Spoofing</a>
+          <a class="navbar-brand">Pokemon GO Spoofing</a>
         </div>
       </div>
     </nav>
@@ -115,7 +115,7 @@
       </div>
 
       <footer>
-        <p>&copy; <b>Pokémon is Copyright Gamefreak, Nintendo and The Pokémon Company 2001-2020 All images and names owned and trademarked by Nintendo, Niantic, The Pokémon Company, and Gamefreak are property of their respective owners.</b></p>
+        
       </footer>
     </div> <!-- /container -->
 
