Adjust link output + style when links are clicked

--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
         <li>The converted GPX file will be downloaded to your device.</li>
       </ul>
       <h4>Field Quests</h4>
-      <p>Since <a href="https://play.google.com/store/apps/details?id=com.pokemod.velocity&hl=en_US" target="_blank">Velocity</a> can't handle links from a browser on android 12 or higher this tool can be used to copy paste field quests from Pokedex100.</p>
       <ul>
         <li>Copy paste the whole field quest text on the Coordinates box</li>
         <li>Click the "Display Velocity Links" button.</li>
-        <li>Copy the output and paste it in a private discord channel of your own.</li>
+        <li>Tap the coordinates on the box below "Velocity Links" to start teleporting.</li>
       </ul>
       <h2>FAQ</h2>
       <b>Q: Will this work with FGL Pro?</b><br>
@@ -104,7 +103,6 @@
       <b>Q: How can I contact you?</b><br>
       A: You can make a issue/PR if you notice a bug/want to add a newer feature. My Discord username is: SoaresPT. Alternatively <a href="http://discordapp.com/users/186588690909233152">click here</a> to talk to me. Even if it's just to say Hi! :)
     </div>
-
     <!-- Bootstrap core JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
